# applifting-api

./: .dockerignore  .env.example  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  alembic.ini  compose.dev.yaml  compose.yaml  main.tf  nginx.conf  pyproject.toml  render.yaml  tox.ini
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 7f789df404dd_add_created_at_updated_at_to_product_.py  e0eee6e44dbd_initial_revision.py
api/: client.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  services.py  utils.py
api/routers/: health.py  products.py
api/schemas/: offer.py  product.py
tests/: _test_products.py  conftest.py  test_health.py  test_products.py
