[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "applifting-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httptools>=0.6.4",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "uvloop>=0.21.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "fastapi[standard]>=0.115.4",
    "loguru>=0.7.2",
    "httpx>=0.27.2",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "tox>=4.23.2",
]
