[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "applifting-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httptools>=0.6.4",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "fastapi[standard]>=0.115.4",
    "loguru>=0.7.2",
    "httpx>=0.27.2",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.43.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "tox-uv>=1.16.0",
    "tox>=4.23.2",
]

[tool.setuptools]
packages = ["api"]
